第二次提交

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".activity.FilterTicketActivity" />
         <activity android:name=".activity.OrderDetailActivity" />
         <activity android:name=".activity.PayTypeActivity" />
+        <activity android:name=".activity.ControlDepartmentActivity" />
     </application>
 
 </manifest>
