--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
         applicationId "com.example.onedream.flightapp"
         minSdkVersion 15
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 1001
+        versionName "1.0.01"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -22,7 +22,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -41,10 +41,15 @@ dependencies {
         exclude group: 'com.android.support'
     }
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-//    implementation 'me.jessyan:autosize:0.9.5'//今日头条屏幕适配方案
+    //    implementation 'me.jessyan:autosize:0.9.5'//今日头条屏幕适配方案
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.whvcse:EndecryptUtil:1.0.4'
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-alpha-9'//基础包，自带ClassicsHeader（经典）、BezierRadarHeader（贝塞尔雷达）两个 Header.
-    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-alpha-9'//没有使用特殊Header，可以不加这行
-    implementation 'com.android.support:design:28.0.0'//加这行可以看到xml的预览效果
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-alpha-9'
+    //基础包，自带ClassicsHeader（经典）、BezierRadarHeader（贝塞尔雷达）两个 Header.
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-alpha-9'
+    //没有使用特殊Header，可以不加这行
+    implementation 'com.android.support:design:28.0.0'
+    //加这行可以看到xml的预览效果
+    implementation files('libs/commons-lang.jar')
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
 }
